# Magisterka

Drone_detection/: CMakeLists.txt  Image_source_typ.hpp  System.cpp  System.hpp
Drone_detection/Connection/: Connection.cpp  Connection.hpp  Connection_Backend.cpp  Connection_Backend.hpp  Connection_Frontend.hpp
Drone_detection/Image_Analysis/: Objects_tracker.cpp  Objects_tracker.hpp
Drone_detection/Network/: Custom_Data_IO.cpp  Permanent_Connector.cpp  sended_struct.hpp
Polaczenie-sieciowe_dla-RPi/: .gitignore  Binarization.cpp  Binarization.hpp  Broadcast_connector.cpp  Broadcast_connector.hpp  Button.hpp  CMakeLists.txt  Camera_insert_parameters.csv  Configs.hpp  Connection.cpp  Connection.hpp  Connection_Backend.cpp  Connection_Backend.hpp  Connection_Frontend.cpp  Connection_Frontend.hpp  Custom_Data_IO.cpp  Custom_Data_IO.hpp  Frame_parameters.hpp  Graphic_Manager.cpp  Graphic_Manager.hpp  Graphic_Warehouse.hpp  Image_Receiver.cpp  Image_Sender.cpp  Image_Sender.hpp  Image_source.cpp  Image_source.hpp  Image_source_typ.cpp  Image_source_typ.hpp  Objects_tracker.cpp  Objects_tracker.hpp  Parameter_sender.cpp  Parameter_sender.hpp  Permanent_Connector.cpp  Permanent_Connector.hpp  Pernament_Connector.cpp  Pernament_Connector.hpp  Projection_image_calculate.cpp  Projection_image_calculate.hpp  Projection_image_calculator.cpp  Projection_image_calculator.hpp  (+22 more)
Polaczenie-sieciowe_dla-RPi/Connection/: Broadcast_connector.cpp  Broadcast_connector.hpp  Connection.cpp  Connection.hpp  Connection_Backend.cpp  Connection_Backend.hpp  Connection_Frontend.cpp  Connection_Frontend.hpp  Image_Sender.cpp  Parameter_sender.cpp  Parameter_sender.hpp  Pernament_Connector.cpp  Pernament_Connector.hpp  Sended_struct.cpp  Sended_struct.hpp
Polaczenie-sieciowe_dla-RPi/GUI/: Button.hpp  Buttons_Field.hpp  Custom_Data_IO_Window.hpp  Detected_objects_display.hpp  Detected_objects_displayer.cpp  Detected_objects_displayer.hpp  Graphic_Manager.cpp  Graphic_Manager.hpp  Graphic_Warehouse.cpp  Graphic_Warehouse.hpp  Small_window.cpp  Small_window.hpp  Window.hpp
Polaczenie-sieciowe_dla-RPi/Hw_params/Dell/: Camera_external_parameters.csv
Polaczenie-sieciowe_dla-RPi/Hw_params/Hp/: Camera_external_parameters.csv  Camera_internal_parameters.csv
Polaczenie-sieciowe_dla-RPi/Hw_params/Hp/Archiwum/20_11/: Camera_external_parameters.csv  Camera_internal_parameters.csv
Polaczenie-sieciowe_dla-RPi/Image_Analysis/: Binarization.cpp  Binarization.hpp  Camera.hpp  Frame_parameters.hpp  Image_source.cpp  Image_source.hpp  Projection_image_calculate.cpp  Projection_image_calculate.hpp  Projection_image_calculator.cpp  Projection_image_calculator.hpp  Rays_intersection_analyzer.cpp  Rays_intersection_analyzer.hpp
Polaczenie-sieciowe_dla-RPi/Network/: Broadcast_Connector.cpp  Broadcast_Connector.hpp  Broadcast_connector.cpp  Custom_Data_IO.cpp  Custom_Data_IO.hpp  Image_Receiver.cpp  Image_Receiver.hpp  Image_Sender.cpp  Image_Sender.hpp  Parameter_sender.cpp  Parameter_sender.hpp  Parameters_receiver.cpp  Parameters_receiver.hpp  Permanent_Connector.cpp  Permanent_Connector.hpp  Pernament_Connector.cpp  Pernament_Connector.hpp  Rays_receiver.cpp  Rays_receiver.hpp  Sended_struct.cpp  Sended_struct.hpp  sended_struct.cpp  sended_struct.hpp
Polaczenie-sieciowe_dla-RPi/Python_Scripts/: calibration.py  examole_from_opencv.py  get_global_matrix.py  take_photo.py
Polaczenie-sieciowe_dla-RPi/Python_Scripts/Camera_matrixs/: IPhone.xlsx
Polaczenie-sieciowe_dla-RPi/Python_Scripts/Cameras_matrix/: Dell.csv  Dell.npy  Dell.xlsx  Hp.xlsx  Samsung_A50_WPR.npy  Samsung_A50_WPR.xlsx
Polaczenie-sieciowe_dla-RPi/Python_Scripts/Distortion_vectors/: Dell.csv  Dell.npy  Dell.xlsx  Hp.csv  Hp.npy  Hp.xlsx
Polaczenie-sieciowe_dla-RPi/Python_Scripts/External_camera_matrices/: Dell.csv  Dell.npy  Hp.csv  Hp.npy
Polaczenie-sieciowe_dla-RPi/Python_Scripts/Internal_camera_matrices/: Dell.csv  Dell.npy  Dell.xlsx  Hp.npy  Hp.xlsx  IPhone.npy
Polaczenie-sieciowe_dla-RPi/Python_Scripts/Result_by_device/Dell/: Camera_external_parameters.csv  Camera_internal_parameters.csv
Polaczenie-sieciowe_dla-RPi/Python_Scripts/Result_by_device/Hp/: Camera_external_parameters.csv  Camera_internal_parameters.csv
